[gd_scene load_steps=10 format=3 uid="uid://bauf18vsip4af"]

[ext_resource type="Script" uid="uid://be6e5sxiny73q" path="res://Scenes/Weapons/claw_weapon.gd" id="1_k6be6"]
[ext_resource type="Texture2D" uid="uid://cbu5t1d11q3un" path="res://Sprites/Claw_attack.png" id="1_tdgi3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vu3fy"]
atlas = ExtResource("1_tdgi3")
region = Rect2(28, 0, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_spvvd"]
atlas = ExtResource("1_tdgi3")
region = Rect2(0, 0, 28, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2if1"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_vu3fy")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_spvvd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4phs"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_ctwnq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ivlbj"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.51, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(28, 0), Vector2(28, 0), Vector2(-28, 0), Vector2(-28, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mp75g"]
_data = {
&"RESET": SubResource("Animation_ctwnq"),
&"new_animation": SubResource("Animation_ivlbj")
}

[node name="ClawWeapon" type="Node2D"]
script = ExtResource("1_k6be6")
metadata/_edit_vertical_guides_ = [24.0]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_y2if1")
autoplay = "default"
frame = 1
frame_progress = 1.0

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_w4phs")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../hitbox/CollisionShape2D")
libraries = {
"": SubResource("AnimationLibrary_mp75g")
}

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
